# fastapi-full-stack

./: README.md  config.py  pyproject.toml
.github/workflows/: project-ci.yml
backend/: database.py  main.py  thiking_python,md
backend/models/: blogs.py
backend/routers/: blogs.py  file_handler_route.py  home_route.py  openai_route.py
frontend/static/css/: index.css
frontend/templates/: 404.html  base.html  blogs.html  index.html
tests/: test_endpoints.py
