[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bikash Jaiswal <bjjaiswal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
black = "^23.7.0"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
pydantic-settings = "^2.0.3"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
pypdf2 = "^3.0.1"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start='backend.main:start'